--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,13 @@
     --logoFont: 'Philosopher';
 }
 
+
+@keyframes DynamicBG { 
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+  }
+
 html, body, article {
     position: relative;
 
@@ -26,27 +33,19 @@ main {
     flex-direction: row; 
     justify-content: flex-start;
     align-items: center;
-
-    background-color: #fef9f2;
-
+    background: var(--main-background); 
+    
+    background-size: var(--main-backgrond-size);
+    animation: var(--main-background-animation);
+    
     flex: 1; 
     overflow: hidden;
-}
-main::before {
-    content: '';
-    position: absolute;
-
-    width: 100%;
-    height: 100%;
-    
-    background: linear-gradient(180deg, #484848, #15151e);
-    
-    opacity: var(--main-opacity); 
-}
+} 
 
 
- article {
-    
+ article {  
+
+
     z-index: 0;
  }
 
