--- a/styles/header.css
+++ b/styles/header.css
@@ -76,7 +76,8 @@ div.header-mobile-scroll {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-
+    
+    width: -moz-fit-content;
     width: fit-content;
     height: 30px;
     margin-right: 4px;
