--- a/styles/index.css
+++ b/styles/index.css
@@ -36,6 +36,14 @@ main {
 } 
 
 
+* {
+    margin: 0;
+    padding: 0;
+    background: none;
+    border: none;
+    outline: none;
+}
+
 
 
 .non-select {
