--- a/Area/styles/header.css
+++ b/Area/styles/header.css
@@ -3,8 +3,7 @@
 }
 button#settingsBtn {
     display: none;
-}
-
+} 
 
 
 header {
@@ -18,8 +17,7 @@ header {
 
     background: var(--h-background);
     color: var(--based-color);
-    box-shadow: var(--edge-shadow);
- 
+    box-shadow: var(--edge-shadow); 
     z-index: 2;
 }
  
@@ -28,7 +26,6 @@ header {
 
 
 section.header-logo {
-    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -40,10 +37,15 @@ section.header-logo {
     margin-left: 10px; 
 }
 section.header-logo img {
-    height: 44px;
-    margin-right: 15px;
+    height: 40px;
+    margin-right: 10px;
+    padding: 4px;
+
+    /* background: var(--accent-color); */
+    transform: scale(1.4) translate(-3px, 1px);
+    border-radius: 100%;
 }
-section.header-logo h1 {
+section.header-logo h1 { 
     margin: 0;
     font-size: 36px;
     font-family: var(--logoFont);
@@ -51,15 +53,14 @@ section.header-logo h1 {
 
     transition: .35s color;
 }
-section.header-logo a {
-    position: absolute;
+section.header-logo h1 mark { 
+    position: relative; 
+    color: #93a6ff;
+    cursor: pointer; 
+} 
 
-    width: 100%;
-    height: 100%;
 
-    top: 0;
-    left: 0;
-}
+
 
 
 
@@ -82,7 +83,8 @@ div.header-mobile-scroll {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-
+    
+    width: -moz-fit-content;
     width: fit-content;
     height: 30px;
     margin-right: 4px;
@@ -123,16 +125,19 @@ div.header-mobile-scroll button {
     font-family: var(--addFont);
     letter-spacing: .8px; 
     line-height: 1; 
-    
+     
     transition: .45s all;
 } 
-div.header-controls button:hover {
+div.header-controls button:not(.active-btn):hover,
+div.header-theme button:not(.active-btn):hover {
+    cursor: pointer;
     background: var(--controls-hoverBackground); 
 } 
 div.header-controls button.active-btn {
-    background: var(--controls-background);
+    background: var(--accent-color);
     color: #000;
-} 
+}  
+
 
 
 div.header-language button {
@@ -143,7 +148,7 @@ div.header-choosetype button {
     width: calc( var(--btnOneWidth) * (10/2) );
 }
 div.header-theme button { 
-    width: calc( var(--btnOneWidth) * (10/3) );
+    width: calc( var(--btnOneWidth) * (12/3) );
 }
 div.header-mobile-scroll button {
     width: calc( var(--btnOneWidth) * (10/1) );
@@ -155,7 +160,7 @@ div.header-mobile-scroll button {
 
 
 
-div.header-controls button:not(:last-child)::after{
+div.header-language button:not(:last-child)::after{
     content: '';
     position: absolute;
     height: 60%;
@@ -166,7 +171,7 @@ div.header-controls button:not(:last-child)::after{
     background-color: var(--based-color);
     opacity: .5;
 }
-div.header-controls button.active-btn::after { 
+div.header-language button.active-btn::after { 
     content: '';
     position: absolute;
     height: 60%;
@@ -189,15 +194,19 @@ div.header-controls button.active-btn {
 div.header-theme span {
     position: absolute;
     display: block;
+
     width: 21px;
     height: 21px;
+
     border-radius: 21px;
 
-    transition: 1.5s background, 1.5s box-shadow; 
-    transition-delay: .6s;
+    z-index: 2;
+    transition: 1.5s background, 1.5s box-shadow;
 }
 button#lightBtn span {
     background: linear-gradient(45deg, #ff3b00, #ffe000);
+    box-shadow: inset 3px -3px 4px -1px #00000094, 
+                -4px 3px 12px -3px #000
 }
 button#lightBtn.active-btn span {
     box-shadow: inset 1px -1px 3px 0px #743000, 
@@ -205,8 +214,8 @@ button#lightBtn.active-btn span {
 }
 button#dynamicBtn span {
     background: linear-gradient(166deg, #00ffd0, #0095ff);
-    box-shadow: inset -4px -2px 4px -1px #00000094, 
-                9px 4px 12px -3px #000;
+    box-shadow: inset 3px -3px 4px -1px #00000094, 
+                9px 4px 13px -5px #000
 }
 button#dynamicBtn.active-btn span {
     box-shadow: inset -1px -1px 4px -1px #000, 
@@ -214,12 +223,17 @@ button#dynamicBtn.active-btn span {
 }
 button#darkBtn span {
     background: linear-gradient(-27deg, #9b9b9b 20%, #e9e9e9 70%);
-    box-shadow: inset -4px -2px 4px -1px #00000094, 9px 3px 12px -3px #000
+    box-shadow: inset -4px -2px 4px -1px #00000094, 
+                9px 4px 13px -5px #000
 }
 button#darkBtn.active-btn span {
-    background: linear-gradient(135deg, white, #545454);
-    box-shadow: inset -2px -2px 2px 0px #00000061, 
+    background: linear-gradient(195deg, white, #545454);
+    box-shadow: inset 2px -2px 2px 0px #00000061, 
                 45px 0px 30px 52px #b3b3b3;
+
+    /* dynamic dark
+    box-shadow: inset -1px -1px 4px -1px #000, 10px 0px 55px 33px #67b9ff;
+    */
 }
 
 div#themeAnimation {
