--- a/Area/styles/index.css
+++ b/Area/styles/index.css
@@ -41,8 +41,21 @@ main article {
     align-items: flex-start;
     width: 80%;
     height: 100%;
-
     transition: 1s transform ease-in-out;
+}
+main article h2 {
+    font-size: 44px;
+    font-family: 'Aetherius';
+    font-weight: 100;
+    margin: auto 0;
+}
+
+main article section {
+    position: relative;
+    display: flex;
+    height: 70%;
+    width: 100%;
+    margin-bottom: auto;
 }
 
 
