--- a/Area/styles/significant.css
+++ b/Area/styles/significant.css
@@ -62,7 +62,7 @@
     opacity: .7;
 }
 #significant section div.significant-background:hover h3 {
-    color: var(--revert-color); 
+    color: #fffc;
 }
 #significant section div.significant-background:hover h3::before {
     opacity: 0;
@@ -78,7 +78,7 @@
     font-weight: 900;
     font-size: 24px;
     font-family: 'Neris';
-    color: var(--based-color);
+    color: #444;
     z-index: 1;
 }
 #significant section h3::before {
@@ -90,7 +90,7 @@
     top: 0;
 
     opacity: 1;
-    background: var(--h-background);
+    background: #fff;
     border-radius: 2px;
     transition: .4s all;
     z-index: -1;
@@ -107,7 +107,7 @@
     font-weight: 900;
     font-size: 20px;
     font-family: 'Neris';
-    color: var(--revert-color);
+    color: #fffc;
     z-index: 1;
 }
 #significant section button {
@@ -119,12 +119,12 @@
     border: none;
     border-radius: 4px;
     background: none;
-    border: 1px solid var(--h-background);
+    border: 1px solid #fff6;
  
     font-weight: 900;
     font-size: 20px;
     font-family: 'Neris';
-    color: var(--revert-color);
+    color: #fffc;
     transition: .25s all;
     z-index: 1;
 }
