--- a/styles/media.css
+++ b/styles/media.css
@@ -230,11 +230,11 @@
     #aboutWrap::before,
     #aboutWrap::after {
         top: 5px;
-        right: 5px;
+        left: 5px;
     }
     #aboutClose {
         top: 10px;
-        right: 10px;
+        left: 10px;
     }
 
     
