--- a/Area/styles/list.css
+++ b/Area/styles/list.css
@@ -32,7 +32,7 @@
     height: 100%;
     max-height: 100%;
     min-width: 100%;
-    transition: 1s transform ease-in-out;
+    /* transition: 1s transform ease-in-out; */
 }
 
 #list span, 
