--- a/Area/styles/list.css
+++ b/Area/styles/list.css
@@ -4,10 +4,12 @@
 
     justify-content: flex-start;
     align-items: flex-start;
-
- 
-
 }
+#list h2 i {
+    font-family: 'Philosopher';
+    font-style: normal;
+}
+
 #listWrap {
     position: relative;
     display: flex;
@@ -22,7 +24,7 @@
 
 #listWrap div {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
 
     justify-content: flex-start;
@@ -32,7 +34,6 @@
     height: 100%;
     max-height: 100%;
     min-width: 100%;
-    /* transition: 1s transform ease-in-out; */
 }
 
 #list span, 
@@ -78,7 +79,7 @@
 
 #list a {
     color: var(--list-linkColor);
-
+    white-space: nowrap;
 }
 
 
