river page + new river.json (light & full)

--- a/Area/styles/list.css
+++ b/Area/styles/list.css
@@ -80,6 +80,8 @@
 #list a {
     color: var(--list-linkColor);
     white-space: nowrap;
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 
